# axomind-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/axomind_mcp/: __init__.py  _common.py  _doctrines.py  _messenger.py  _ollama_tools.py  _planning.py  _user.py  daemon.py
src/axomind_mcp/mindmap/: __init__.py  _mindmap.py  config_layout_mindmap.py
src/axomind_mcp/serveur/: __init__.py  _ws_listener.py  server.py
src/axomind_mcp/tools/: __init__.py  _file_reader.py  _tree.py  md_to_quill_delta.py
tests/: conftest.py  test_md_to_quill_delta.py  test_router.py  test_server.py  test_tree.py
